--- a/jupyter/nb1.ipynb
+++ b/jupyter/nb1.ipynb
@@ -2,12 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c63d51af-a6da-4c80-8dba-af386adc2b83",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "openai_url:      https://gbbcjcaigopenai3.openai.azure.com/\n",
+      "openai_key:      d1b\n",
+      "embeddings_dep:  embeddings\n",
+      "completions_dep: gpt4\n"
+     ]
+    }
+   ],
    "source": [
     "# Read env vars\n",
     "import os\n",
@@ -33,10 +44,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c172ff81-6e57-46ff-b0fb-e5255f846495",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package                   Version\n",
+      "------------------------- ---------------\n",
+      "aiofiles                  23.2.1\n",
+      "aiohttp                   3.9.3\n",
+      "aiosignal                 1.3.1\n",
+      "annotated-types           0.6.0\n",
+      "anyio                     4.3.0\n",
+      "appnope                   0.1.4\n",
+      "argon2-cffi               23.1.0\n",
+      "argon2-cffi-bindings      21.2.0\n",
+      "arrow                     1.3.0\n",
+      "asgiref                   3.8.1\n",
+      "asttokens                 2.4.1\n",
+      "async-lru                 2.0.4\n",
+      "attrs                     23.2.0\n",
+      "Babel                     2.14.0\n",
+      "beautifulsoup4            4.12.3\n",
+      "bleach                    6.1.0\n",
+      "build                     1.2.1\n",
+      "certifi                   2024.2.2\n",
+      "cffi                      1.16.0\n",
+      "chardet                   5.2.0\n",
+      "charset-normalizer        3.3.2\n",
+      "click                     8.1.7\n",
+      "comm                      0.2.1\n",
+      "contourpy                 1.2.0\n",
+      "cycler                    0.12.1\n",
+      "dataclasses-json          0.6.4\n",
+      "debugpy                   1.8.1\n",
+      "decorator                 5.1.1\n",
+      "defusedxml                0.7.1\n",
+      "distro                    1.9.0\n",
+      "dnspython                 2.6.1\n",
+      "et-xmlfile                1.1.0\n",
+      "executing                 2.0.1\n",
+      "fastjsonschema            2.19.1\n",
+      "fonttools                 4.49.0\n",
+      "fqdn                      1.5.1\n",
+      "frozenlist                1.4.1\n",
+      "h11                       0.14.0\n",
+      "httpcore                  1.0.4\n",
+      "httpx                     0.27.0\n",
+      "idna                      3.6\n",
+      "ipykernel                 6.29.2\n",
+      "ipython                   8.22.1\n",
+      "isodate                   0.6.1\n",
+      "isoduration               20.11.0\n",
+      "jedi                      0.19.1\n",
+      "Jinja2                    3.1.3\n",
+      "json5                     0.9.17\n",
+      "jsonpatch                 1.33\n",
+      "jsonpointer               2.4\n",
+      "jsonschema                4.21.1\n",
+      "jsonschema-path           0.3.2\n",
+      "jsonschema-spec           0.2.4\n",
+      "jsonschema-specifications 2023.7.1\n",
+      "jupyter_client            8.6.0\n",
+      "jupyter_core              5.7.1\n",
+      "jupyter-events            0.9.0\n",
+      "jupyter-lsp               2.2.2\n",
+      "jupyter_server            2.12.5\n",
+      "jupyter_server_terminals  0.5.2\n",
+      "jupyterlab                4.1.2\n",
+      "jupyterlab_pygments       0.3.0\n",
+      "jupyterlab_server         2.25.3\n",
+      "kiwisolver                1.4.5\n",
+      "langchain                 0.1.9\n",
+      "langchain-community       0.0.24\n",
+      "langchain-core            0.1.26\n",
+      "langsmith                 0.1.7\n",
+      "lazy-object-proxy         1.10.0\n",
+      "MarkupSafe                2.1.5\n",
+      "marshmallow               3.20.2\n",
+      "matplotlib                3.8.3\n",
+      "matplotlib-inline         0.1.6\n",
+      "mistune                   3.0.2\n",
+      "more-itertools            10.2.0\n",
+      "motor                     3.4.0\n",
+      "multidict                 6.0.5\n",
+      "mypy-extensions           1.0.0\n",
+      "nbclient                  0.9.0\n",
+      "nbconvert                 7.16.1\n",
+      "nbformat                  5.9.2\n",
+      "nest-asyncio              1.6.0\n",
+      "notebook                  7.1.0\n",
+      "notebook_shim             0.2.4\n",
+      "numpy                     1.26.4\n",
+      "openai                    1.12.0\n",
+      "openapi-core              0.18.2\n",
+      "openapi-schema-validator  0.6.2\n",
+      "openapi-spec-validator    0.7.1\n",
+      "openpyxl                  3.1.2\n",
+      "orjson                    3.9.15\n",
+      "overrides                 7.7.0\n",
+      "packaging                 23.2\n",
+      "pandas                    2.2.1\n",
+      "pandocfilters             1.5.1\n",
+      "parse                     1.20.1\n",
+      "parso                     0.8.3\n",
+      "pathable                  0.4.3\n",
+      "pexpect                   4.9.0\n",
+      "pillow                    10.2.0\n",
+      "pip                       24.0\n",
+      "pip-tools                 7.4.1\n",
+      "platformdirs              4.2.0\n",
+      "prance                    23.6.21.0\n",
+      "prometheus_client         0.20.0\n",
+      "prompt-toolkit            3.0.43\n",
+      "psutil                    5.9.8\n",
+      "ptyprocess                0.7.0\n",
+      "pure-eval                 0.2.2\n",
+      "pycparser                 2.21\n",
+      "pydantic                  2.6.2\n",
+      "pydantic_core             2.16.3\n",
+      "Pygments                  2.17.2\n",
+      "pymongo                   4.6.2\n",
+      "pyparsing                 3.1.1\n",
+      "pyproject_hooks           1.1.0\n",
+      "python-dateutil           2.8.2\n",
+      "python-dotenv             1.0.1\n",
+      "python-json-logger        2.0.7\n",
+      "pytz                      2024.1\n",
+      "PyYAML                    6.0.1\n",
+      "pyzmq                     25.1.2\n",
+      "rdflib                    7.0.0\n",
+      "referencing               0.30.2\n",
+      "regex                     2023.12.25\n",
+      "requests                  2.31.0\n",
+      "rfc3339-validator         0.1.4\n",
+      "rfc3986-validator         0.1.1\n",
+      "rpds-py                   0.18.0\n",
+      "ruamel.yaml               0.18.6\n",
+      "ruamel.yaml.clib          0.2.8\n",
+      "semantic-kernel           0.9.1b1\n",
+      "Send2Trash                1.8.2\n",
+      "setuptools                70.0.0\n",
+      "six                       1.16.0\n",
+      "sniffio                   1.3.0\n",
+      "soupsieve                 2.5\n",
+      "SQLAlchemy                2.0.27\n",
+      "stack-data                0.6.3\n",
+      "tenacity                  8.2.3\n",
+      "terminado                 0.18.0\n",
+      "tiktoken                  0.6.0\n",
+      "tinycss2                  1.2.1\n",
+      "tornado                   6.4\n",
+      "tqdm                      4.66.2\n",
+      "traitlets                 5.14.1\n",
+      "types-python-dateutil     2.8.19.20240106\n",
+      "typing_extensions         4.9.0\n",
+      "typing-inspect            0.9.0\n",
+      "tzdata                    2024.1\n",
+      "uri-template              1.3.0\n",
+      "urllib3                   2.2.1\n",
+      "wcwidth                   0.2.13\n",
+      "webcolors                 1.13\n",
+      "webencodings              0.5.1\n",
+      "websocket-client          1.7.0\n",
+      "Werkzeug                  3.0.3\n",
+      "wheel                     0.43.0\n",
+      "xmlformatter              0.2.6\n",
+      "yarl                      1.9.4\n"
+     ]
+    }
+   ],
    "source": [
     "# List the pip installed current libraries in this venv.\n",
     "\n",
@@ -45,10 +225,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "da46cfb1-9cf4-4ce4-b2b4-cf06f5b60352",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "line: 0 # This file lists the Python libraries used in the virtual enviroment.\n",
+      "line: 1 # See the venv.ps1 and venv.sh scripts in this directory.\n",
+      "line: 2 # Chris Joakim\n",
+      "line: 3 \n",
+      "line: 4 Jinja2\n",
+      "line: 5 arrow\n",
+      "line: 6 certifi\n",
+      "line: 7 dnspython\n",
+      "line: 8 httpx\n",
+      "line: 9 \n",
+      "line: 10 #jupyter\n",
+      "line: 11 notebook\n",
+      "line: 12 \n",
+      "line: 13 langchain\n",
+      "line: 14 langchain_community\n",
+      "line: 15 matplotlib\n",
+      "line: 16 numpy\n",
+      "line: 17 openai\n",
+      "line: 18 openpyxl\n",
+      "line: 19 pandas\n",
+      "line: 20 pymongo\n",
+      "line: 21 python-dotenv\n",
+      "line: 22 rdflib\n",
+      "line: 23 tiktoken>=0.4.0\n",
+      "line: 24 xmlformatter\n"
+     ]
+    }
+   ],
    "source": [
     "from pysrc.util.fs import FS\n",
     "\n",
@@ -72,6 +284,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
