aoai1.ipynb, improved dotenv file

--- a/jupyter/nb1.ipynb
+++ b/jupyter/nb1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "c63d51af-a6da-4c80-8dba-af386adc2b83",
    "metadata": {
     "scrolled": true
@@ -20,18 +20,17 @@
     }
    ],
    "source": [
-    "# Read env vars\n",
+    "# Read environment variables\n",
+    "\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv(override=True)\n",
     "\n",
-    "openai_url      = os.environ['CAIG_AZURE_OPENAI_URL']\n",
-    "openai_key      = os.environ['CAIG_AZURE_OPENAI_KEY']\n",
-    "embeddings_dep  = os.environ['CAIG_AZURE_OPENAI_EMBEDDINGS_DEP']\n",
-    "completions_dep = os.environ['CAIG_AZURE_OPENAI_COMPLETIONS_DEP']\n",
-    "vcore_conn_str  = os.environ['CAIG_AZURE_MONGO_VCORE_CONN_STR']\n",
-    "vcore_db        = os.environ['CAIG_GRAPH_SOURCE_DB']\n",
+    "openai_url      = os.environ['AZURE_OPENAI_URL']\n",
+    "openai_key      = os.environ['AZURE_OPENAI_KEY']\n",
+    "embeddings_dep  = os.environ['AZURE_OPENAI_EMBEDDINGS_DEP']\n",
+    "completions_dep = os.environ['AZURE_OPENAI_COMPLETIONS_DEP']\n",
     "\n",
     "print(\"openai_url:      {}\".format(openai_url))\n",
     "print(\"openai_key:      {}\".format(openai_key[0:3]))\n",
@@ -44,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "c172ff81-6e57-46ff-b0fb-e5255f846495",
    "metadata": {},
    "outputs": [
@@ -85,6 +84,7 @@
       "defusedxml                0.7.1\n",
       "distro                    1.9.0\n",
       "dnspython                 2.6.1\n",
+      "docopt                    0.6.2\n",
       "et-xmlfile                1.1.0\n",
       "executing                 2.0.1\n",
       "fastjsonschema            2.19.1\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "da46cfb1-9cf4-4ce4-b2b4-cf06f5b60352",
    "metadata": {},
    "outputs": [
@@ -241,23 +241,21 @@
       "line: 5 arrow\n",
       "line: 6 certifi\n",
       "line: 7 dnspython\n",
-      "line: 8 httpx\n",
-      "line: 9 \n",
-      "line: 10 #jupyter\n",
-      "line: 11 notebook\n",
-      "line: 12 \n",
-      "line: 13 langchain\n",
-      "line: 14 langchain_community\n",
-      "line: 15 matplotlib\n",
-      "line: 16 numpy\n",
-      "line: 17 openai\n",
-      "line: 18 openpyxl\n",
-      "line: 19 pandas\n",
-      "line: 20 pymongo\n",
-      "line: 21 python-dotenv\n",
-      "line: 22 rdflib\n",
-      "line: 23 tiktoken>=0.4.0\n",
-      "line: 24 xmlformatter\n"
+      "line: 8 docopt\n",
+      "line: 9 httpx\n",
+      "line: 10 notebook\n",
+      "line: 11 langchain\n",
+      "line: 12 langchain_community\n",
+      "line: 13 matplotlib\n",
+      "line: 14 numpy\n",
+      "line: 15 openai\n",
+      "line: 16 openpyxl\n",
+      "line: 17 pandas\n",
+      "line: 18 pymongo\n",
+      "line: 19 python-dotenv\n",
+      "line: 20 rdflib\n",
+      "line: 21 tiktoken>=0.4.0\n",
+      "line: 22 xmlformatter\n"
      ]
     }
    ],
@@ -284,18 +282,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.3"
   }
  },
  "nbformat": 4,
