aoai1.ipynb - upgraded api version to 2023-07-01-preview

--- a/jupyter/aoai1.ipynb
+++ b/jupyter/aoai1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "c63d51af-a6da-4c80-8dba-af386adc2b83",
    "metadata": {
     "scrolled": true
@@ -14,8 +14,10 @@
      "text": [
       "openai_url:      https://gbbcjcaigopenai3.openai.azure.com/\n",
       "openai_key:      d1b\n",
+      "openai_version:  2023-07-01-preview\n",
       "embeddings_dep:  embeddings\n",
-      "completions_dep: gpt4\n"
+      "completions_dep: gpt4\n",
+      "aoai_client created\n"
      ]
     }
    ],
@@ -23,29 +25,46 @@
     "# Read environment variables\n",
     "\n",
     "import os\n",
+    "import traceback\n",
+    "\n",
+    "import openai\n",
+    "from openai import AzureOpenAI\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv(override=True)\n",
     "\n",
     "openai_url      = os.environ['AZURE_OPENAI_URL']\n",
     "openai_key      = os.environ['AZURE_OPENAI_KEY']\n",
+    "openai_version  = os.environ['AZURE_OPENAI_API_VERSION']  # \"2023-07-01-preview\" \n",
     "embeddings_dep  = os.environ['AZURE_OPENAI_EMBEDDINGS_DEP']\n",
     "completions_dep = os.environ['AZURE_OPENAI_COMPLETIONS_DEP']\n",
-    "openai_version  = os.environ['AZURE_OPENAI_API_VERSION']\n",
     "\n",
+    "openai.api_type = \"azure\"\n",
+    "openai.api_version = openai_version\n",
+    "openai.api_base = openai_url\n",
+    "openai.api_key  = openai_key\n",
     "\n",
     "print(\"openai_url:      {}\".format(openai_url))\n",
     "print(\"openai_key:      {}\".format(openai_key[0:3]))\n",
+    "print(\"openai_version:  {}\".format(openai_version))\n",
     "print(\"embeddings_dep:  {}\".format(embeddings_dep))\n",
     "print(\"completions_dep: {}\".format(completions_dep))\n",
     "\n",
-    "# See https://code.visualstudio.com/docs/datascience/jupyter-notebooks\n",
-    "# To select an environment, use the Python: Select Interpreter command from the Command Palette (⇧⌘P)."
+    "try:\n",
+    "    aoai_client = AzureOpenAI(\n",
+    "        azure_endpoint=openai_url,\n",
+    "        api_key=openai_key,\n",
+    "        api_version=openai_version,\n",
+    "    )\n",
+    "    print(\"aoai_client created\")\n",
+    "except Exception as e:\n",
+    "    print(\"Exception while creating AzureOpenAI client: {}\".format(str(e)))\n",
+    "    print(traceback.format_exc())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "c172ff81-6e57-46ff-b0fb-e5255f846495",
    "metadata": {},
    "outputs": [
@@ -68,26 +87,10 @@
    "source": [
     "# Generate embeddings for a given string value.\n",
     "\n",
-    "import json\n",
-    "import openai\n",
-    "import os\n",
     "import traceback\n",
-    "from openai import AzureOpenAI\n",
-    "\n",
     "from pysrc.util.fs import FS\n",
     "\n",
-    "deployment_name = embeddings_dep\n",
-    "openai.api_type = \"azure\"\n",
-    "openai.api_version = openai_version\n",
-    "openai.api_base = openai_url\n",
-    "openai.api_key  = openai_key\n",
-    "\n",
     "try:\n",
-    "    aoai_client = AzureOpenAI(\n",
-    "        azure_endpoint=openai_url,\n",
-    "        api_key=openai_key,\n",
-    "        api_version=openai_version,\n",
-    "    )\n",
     "    text = \"A long time ago came a man on a track. Walking thirty miles with a sack on his back.\"\n",
     "    response = aoai_client.embeddings.create(input=text, model=embeddings_dep)\n",
     "    embedding = response.data[0].embedding\n",
@@ -102,11 +105,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "13c12c6e-766a-4c81-b8b6-d509c52042ab",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ChatCompletion(id='chatcmpl-9T8TvTfB7wUpJarAggGazcNBkwSHA', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='Orange who?', role='assistant', function_call=None, tool_calls=None), content_filter_results={'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}})], created=1716731143, model='gpt-4', object='chat.completion', system_fingerprint='fp_7ec89fabc6', usage=CompletionUsage(completion_tokens=3, prompt_tokens=35, total_tokens=38), prompt_filter_results=[{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}])\n",
+      "role: assistant -> Orange who?\n",
+      "ChatCompletion(id='chatcmpl-9T8Tv3th7zdddlxnNVzEoUdLeYxhB', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='The capital of North Carolina is Raleigh.', role='assistant', function_call=None, tool_calls=None), content_filter_results={'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}})], created=1716731143, model='gpt-4', object='chat.completion', system_fingerprint='fp_7ec89fabc6', usage=CompletionUsage(completion_tokens=8, prompt_tokens=26, total_tokens=34), prompt_filter_results=[{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}])\n",
+      "role: assistant -> The capital of North Carolina is Raleigh.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate a simple completion \n",
+    "\n",
+    "import traceback\n",
+    "\n",
+    "try:\n",
+    "    response = aoai_client.chat.completions.create(\n",
+    "        model=completions_dep,\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "            {\"role\": \"user\", \"content\": \"Knock knock.\"},\n",
+    "            {\"role\": \"assistant\", \"content\": \"Who's there?\"},\n",
+    "            {\"role\": \"user\", \"content\": \"Orange.\"}\n",
+    "        ],\n",
+    "        temperature=0\n",
+    "    )\n",
+    "    print(response)\n",
+    "    print(\"role: {} -> {}\".format(response.choices[0].message.role, response.choices[0].message.content))\n",
+    "    \n",
+    "    response = aoai_client.chat.completions.create(\n",
+    "        model=completions_dep,\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "            {\"role\": \"user\", \"content\": \"What is the capitol of North Carolina?\"},\n",
+    "        ],\n",
+    "        temperature=0\n",
+    "    )\n",
+    "    print(response)\n",
+    "    print(\"role: {} -> {}\".format(response.choices[0].message.role, response.choices[0].message.content))\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(\"Exception while creating completion: {}\".format(str(e)))\n",
+    "    print(traceback.format_exc())"
+   ]
   }
  ],
  "metadata": {
