aoai1.ipynb for FSUtil

--- a/jupyter/aoai1.ipynb
+++ b/jupyter/aoai1.ipynb
@@ -2,25 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "c63d51af-a6da-4c80-8dba-af386adc2b83",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "openai_url:      https://gbbcjcaigopenai3.openai.azure.com/\n",
-      "openai_key:      d1b\n",
-      "openai_version:  2023-07-01-preview\n",
-      "embeddings_dep:  embeddings\n",
-      "completions_dep: gpt4\n",
-      "aoai_client created\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read environment variables\n",
     "\n",
@@ -64,26 +51,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "c172ff81-6e57-46ff-b0fb-e5255f846495",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:file written: tmp/embedding.json\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "embedding length: 1536\n",
-      "embedding[:4]: [0.018863078206777573, -0.006897789891809225, 0.015606330707669258, 0.007549139205366373]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate embeddings for a given string value.\n",
     "\n",
@@ -105,21 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "13c12c6e-766a-4c81-b8b6-d509c52042ab",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ChatCompletion(id='chatcmpl-9T8TvTfB7wUpJarAggGazcNBkwSHA', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='Orange who?', role='assistant', function_call=None, tool_calls=None), content_filter_results={'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}})], created=1716731143, model='gpt-4', object='chat.completion', system_fingerprint='fp_7ec89fabc6', usage=CompletionUsage(completion_tokens=3, prompt_tokens=35, total_tokens=38), prompt_filter_results=[{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}])\n",
-      "role: assistant -> Orange who?\n",
-      "ChatCompletion(id='chatcmpl-9T8Tv3th7zdddlxnNVzEoUdLeYxhB', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='The capital of North Carolina is Raleigh.', role='assistant', function_call=None, tool_calls=None), content_filter_results={'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}})], created=1716731143, model='gpt-4', object='chat.completion', system_fingerprint='fp_7ec89fabc6', usage=CompletionUsage(completion_tokens=8, prompt_tokens=26, total_tokens=34), prompt_filter_results=[{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}])\n",
-      "role: assistant -> The capital of North Carolina is Raleigh.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate a simple completion \n",
     "\n",
@@ -154,6 +114,165 @@
     "    print(\"Exception while creating completion: {}\".format(str(e)))\n",
     "    print(traceback.format_exc())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c11c4ed0-59cd-4446-a9b2-2b1bda49e0f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ChatCompletion(id='chatcmpl-9TxynP8KjYDl1qgqxhzyevFyqjlz3', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='To accomplish your tasks, I\\'ll first provide the Python code for the `FSUtil` class within the specified module structure. Then, I\\'ll create a basic unit test using the pytest framework.\\n\\n### Step 1: Creating the FSUtil Class\\n\\nFirst, ensure you have the correct directory structure. You should create a directory named `pysrc`, within it another directory named `util`, and inside this, a file named `fsutil.py`. The path will be `pysrc/util/fsutil.py`.\\n\\n**pysrc/util/fsutil.py:**\\n\\n```python\\nimport os\\n\\nclass FSUtil:\\n    @classmethod\\n    def as_unix_filename(cls, filename: str) -> str:\\n        return filename.replace(\"\\\\\\\\\", \"/\")\\n\\n    @classmethod\\n    def read(cls, infile: str) -> str | None:\\n        try:\\n            with open(infile, \\'r\\', encoding=\\'utf-8\\') as file:\\n                return file.read()\\n        except FileNotFoundError:\\n            return None\\n\\n    @classmethod\\n    def read_with_encoding(cls, infile: str, encoding: str) -> str | None:\\n        try:\\n            with open(infile, \\'r\\', encoding=encoding) as file:\\n                return file.read()\\n        except FileNotFoundError:\\n            return None\\n\\n    @classmethod\\n    def read_lines(cls, infile: str) -> list[str] | None:\\n        try:\\n            with open(infile, \\'r\\', encoding=\\'utf-8\\') as file:\\n                return file.readlines()\\n        except FileNotFoundError:\\n            return None\\n```\\n\\n### Step 2: Creating a Unit Test Using Pytest\\n\\nFor the unit test, you\\'ll need to create a test file. Typically, this could be placed in a tests directory. For simplicity, you might place it in `pysrc/util/tests/` and name it `test_fsutil.py`.\\n\\nBefore writing the test, ensure you have pytest installed. If not, you can install it using pip:\\n\\n```sh\\npip install pytest\\n```\\n\\n**pysrc/util/tests/test_fsutil.py:**\\n\\n```python\\nimport pytest\\nfrom ..fsutil import FSUtil\\nimport os\\n\\n# Fixture to create a temporary file\\n@pytest.fixture\\ndef temp_file(tmp_path):\\n    d = tmp_path / \"sub\"\\n    d.mkdir()\\n    p = d / \"hello.txt\"\\n    p.write_text(\"Hello, world!\", encoding=\"utf-8\")\\n    return str(p)\\n\\ndef test_as_unix_filename():\\n    assert FSUtil.as_unix_filename(\"path\\\\\\\\to\\\\\\\\file.txt\") == \"path/to/file.txt\"\\n\\ndef test_read(temp_file):\\n    content = FSUtil.read(temp_file)\\n    assert content == \"Hello, world!\"\\n\\ndef test_read_with_encoding(temp_file):\\n    content = FSUtil.read_with_encoding(temp_file, \"utf-8\")\\n    assert content == \"Hello, world!\"\\n\\ndef test_read_lines(temp_file):\\n    lines = FSUtil.read_lines(temp_file)\\n    assert lines == [\"Hello, world!\"]\\n\\ndef test_read_nonexistent_file():\\n    content = FSUtil.read(\"nonexistent_file.txt\")\\n    assert content is None\\n```\\n\\n### Running the Tests\\n\\nTo run the tests, navigate to the root of your project directory in the terminal and execute:\\n\\n```sh\\npytest\\n```\\n\\nPytest will automatically discover and run all tests in the `tests` directory, including those for `FSUtil`.', role='assistant', function_call=None, tool_calls=None), content_filter_results={'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}})], created=1716929101, model='gpt-4', object='chat.completion', system_fingerprint='fp_7ec89fabc6', usage=CompletionUsage(completion_tokens=686, prompt_tokens=187, total_tokens=873), prompt_filter_results=[{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}])\n",
+      "role: assistant\n",
+      "To accomplish your tasks, I'll first provide the Python code for the `FSUtil` class within the specified module structure. Then, I'll create a basic unit test using the pytest framework.\n",
+      "\n",
+      "### Step 1: Creating the FSUtil Class\n",
+      "\n",
+      "First, ensure you have the correct directory structure. You should create a directory named `pysrc`, within it another directory named `util`, and inside this, a file named `fsutil.py`. The path will be `pysrc/util/fsutil.py`.\n",
+      "\n",
+      "**pysrc/util/fsutil.py:**\n",
+      "\n",
+      "```python\n",
+      "import os\n",
+      "\n",
+      "class FSUtil:\n",
+      "    @classmethod\n",
+      "    def as_unix_filename(cls, filename: str) -> str:\n",
+      "        return filename.replace(\"\\\\\", \"/\")\n",
+      "\n",
+      "    @classmethod\n",
+      "    def read(cls, infile: str) -> str | None:\n",
+      "        try:\n",
+      "            with open(infile, 'r', encoding='utf-8') as file:\n",
+      "                return file.read()\n",
+      "        except FileNotFoundError:\n",
+      "            return None\n",
+      "\n",
+      "    @classmethod\n",
+      "    def read_with_encoding(cls, infile: str, encoding: str) -> str | None:\n",
+      "        try:\n",
+      "            with open(infile, 'r', encoding=encoding) as file:\n",
+      "                return file.read()\n",
+      "        except FileNotFoundError:\n",
+      "            return None\n",
+      "\n",
+      "    @classmethod\n",
+      "    def read_lines(cls, infile: str) -> list[str] | None:\n",
+      "        try:\n",
+      "            with open(infile, 'r', encoding='utf-8') as file:\n",
+      "                return file.readlines()\n",
+      "        except FileNotFoundError:\n",
+      "            return None\n",
+      "```\n",
+      "\n",
+      "### Step 2: Creating a Unit Test Using Pytest\n",
+      "\n",
+      "For the unit test, you'll need to create a test file. Typically, this could be placed in a tests directory. For simplicity, you might place it in `pysrc/util/tests/` and name it `test_fsutil.py`.\n",
+      "\n",
+      "Before writing the test, ensure you have pytest installed. If not, you can install it using pip:\n",
+      "\n",
+      "```sh\n",
+      "pip install pytest\n",
+      "```\n",
+      "\n",
+      "**pysrc/util/tests/test_fsutil.py:**\n",
+      "\n",
+      "```python\n",
+      "import pytest\n",
+      "from ..fsutil import FSUtil\n",
+      "import os\n",
+      "\n",
+      "# Fixture to create a temporary file\n",
+      "@pytest.fixture\n",
+      "def temp_file(tmp_path):\n",
+      "    d = tmp_path / \"sub\"\n",
+      "    d.mkdir()\n",
+      "    p = d / \"hello.txt\"\n",
+      "    p.write_text(\"Hello, world!\", encoding=\"utf-8\")\n",
+      "    return str(p)\n",
+      "\n",
+      "def test_as_unix_filename():\n",
+      "    assert FSUtil.as_unix_filename(\"path\\\\to\\\\file.txt\") == \"path/to/file.txt\"\n",
+      "\n",
+      "def test_read(temp_file):\n",
+      "    content = FSUtil.read(temp_file)\n",
+      "    assert content == \"Hello, world!\"\n",
+      "\n",
+      "def test_read_with_encoding(temp_file):\n",
+      "    content = FSUtil.read_with_encoding(temp_file, \"utf-8\")\n",
+      "    assert content == \"Hello, world!\"\n",
+      "\n",
+      "def test_read_lines(temp_file):\n",
+      "    lines = FSUtil.read_lines(temp_file)\n",
+      "    assert lines == [\"Hello, world!\"]\n",
+      "\n",
+      "def test_read_nonexistent_file():\n",
+      "    content = FSUtil.read(\"nonexistent_file.txt\")\n",
+      "    assert content is None\n",
+      "```\n",
+      "\n",
+      "### Running the Tests\n",
+      "\n",
+      "To run the tests, navigate to the root of your project directory in the terminal and execute:\n",
+      "\n",
+      "```sh\n",
+      "pytest\n",
+      "```\n",
+      "\n",
+      "Pytest will automatically discover and run all tests in the `tests` directory, including those for `FSUtil`.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate a python module \n",
+    "\n",
+    "import traceback\n",
+    "\n",
+    "try:\n",
+    "    prompt = \"\"\"\n",
+    "You have two tasks to execute:\n",
+    "- Generate a python 3 class named FSUtil in module pysrc.util.fsutil.py.\n",
+    "- Also generate a unit test for this class which uses the pytest testing framework.\n",
+    "\n",
+    "The focus of class FSUtil is on providing easy to use filesystem access to read and write files.\n",
+    "\n",
+    "The class has no instance methods, only class methods.\n",
+    "\n",
+    "All methods should assume the following:\n",
+    "- Use \"utf-8\" encoding\n",
+    "\n",
+    "It should implement the following list of methods per these signatures:\n",
+    "- def as_unix_filename(cls, filename: str) -> str:\n",
+    "- def read(cls, infile: str) -> str | None:\n",
+    "- def read_with_encoding, infile: str, encoding: str) -> str | None:\n",
+    "- def read_lines(cls, infile: str) -> list[str] | None:\n",
+    "\"\"\"\n",
+    "    response = aoai_client.chat.completions.create(\n",
+    "        model=completions_dep,\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": \"You are a helpful assistant who generates Python code.\"},\n",
+    "            {\"role\": \"user\", \"content\": prompt}\n",
+    "        ],\n",
+    "        temperature=0\n",
+    "    )\n",
+    "    print(response)\n",
+    "    print(\"role: {}\\n{}\".format(response.choices[0].message.role, response.choices[0].message.content))\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(\"Exception while creating completion: {}\".format(str(e)))\n",
+    "    print(traceback.format_exc())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "006d5aa4-df51-4910-86c1-72e5a0fa1487",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
